--- a/tests/fixtures/popo.yml
+++ b/tests/fixtures/popo.yml
@@ -4,7 +4,11 @@ $:
     outputPath: tests/
     #extend: App\AbstractExample::class
     #implement: App\ExampleInterface::class
-    comment: Popo Example. Auto-generated.
+    comment: |
+      @SuppressWarnings(PHPMD)
+      @phpcs:ignoreFile
+      
+      Auto-generated POPO example.
   default:
     title: Hakuna Matata
     idForAll: 10
@@ -14,8 +18,6 @@ $:
 
 Example:
   $:
-    config:
-      comment: Example lorem ipsum
     default:
       title: Example Hakuna Matata
       idForAll: 20
@@ -23,8 +25,6 @@ Example:
       {name: idFromExampleSchema, type: int, default: 20, comment: This property is used in ALL schemas under Example schema}
     ]
   Foo:
-    config:
-      comment: Foo example lorem ipsum
     default:
       title: Example Foo Hakuna Matata
       bar: Bar::class
@@ -65,6 +65,7 @@ AnotherExample:
     property: [
       {name: idForAnotherExample, type: int, comment: This property is used in ALL schemas under AnotherExample schema}
       {name: description}
+      {name: items, type: array, default: [\App\ExampleInterface::TEST_BUZZ]}
     ]
   AnotherFoo:
     default:
