--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
     stdin_open: true # docker run -i
     tty: true        # docker run -t
     command: /bin/bash
+    expose:
+      - 9003
 
 networks:
   localdev:
