added plugin for import block ("use" section of php file)

--- a/tests/fixtures/popo.yml
+++ b/tests/fixtures/popo.yml
@@ -2,9 +2,9 @@ $:
   config:
     namespace: App\Example\Popo
     outputPath: tests/
-    #extend: App\AbstractExample::class
-    #implement: App\ExampleInterface::class
-    comment: |
+    use:
+      - SORT_ASC
+    phpComment: |
       @SuppressWarnings(PHPMD)
       @phpcs:ignoreFile
       
