--- a/popo.yml
+++ b/popo.yml
@@ -15,6 +15,7 @@ Popo:
       namespacePluginCollection:
         - \Popo\Plugin\NamespacePlugin\UseStatementPlugin::class
       classPluginCollection:
+        - \Popo\Plugin\ClassPlugin\ClassAttributePlugin::class
         - \Popo\Plugin\ClassPlugin\ClassCommentPlugin::class
         - \Popo\Plugin\ClassPlugin\ConstPropertyClassPlugin::class
         - \Popo\Plugin\ClassPlugin\DateTimeMethodClassPlugin::class
