--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,10 @@ services:
 
   clix:
     build:
+      args:
+        - XDEBUG_MODE=debug
       context: .
-      dockerfile: docker/build/php/xdebug.Dockerfile
+      dockerfile: docker/build/php/Dockerfile
     profiles: ['clix']
     container_name: php-clix
     init: true
@@ -57,6 +59,7 @@ services:
       - ./:/app/
     environment:
       - TERM=xterm-256color
+      - XDEBUG_MODE=debug
     stdin_open: true # docker run -i
     tty: true        # docker run -t
     command: /bin/bash
