--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "symfony/finder": "^5|^6",
     "symfony/console": "^5|^6",
     "symfony/yaml": "^5|^6",
-    "nette/php-generator": "^4"
+    "nette/php-generator": "^4",
+    "symfony/config": "^6.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^9",
