--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,45 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" backupGlobals="false" backupStaticAttributes="false"
-         colors="true" convertErrorsToExceptions="true" convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true" processIsolation="false" stopOnFailure="true" stopOnError="true"
-         stopOnIncomplete="false" stopOnSkipped="false" stderr="true" bootstrap="tests/bootstrap.php"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
-    <coverage includeUncoveredFiles="true">
-        <include>
-            <directory suffix=".php">./src</directory>
-        </include>
-        <exclude>
-            <file>src/Popo/PopoConfigurator.php</file>
-            <file>src/Popo/Command/CreateSchemaCommand.php</file>
-            <directory>tests/suite/Arrayable/Performance/</directory>
-        </exclude>
-        <report>
-            <clover outputFile="./tests/logs/coverage.xml"/>
-            <html outputDirectory="./tests/logs/coverage"/>
-        </report>
-    </coverage>
-    <logging>
-        <testdoxHtml outputFile="./tests/logs/coverage/index.html"/>
-    </logging>
-    <groups>
-        <exclude>
-            <group>skip</group>
-        </exclude>
-    </groups>
-    <testsuites>
-        <testsuite name="App">
-            <directory>./tests/suite/App</directory>
-        </testsuite>
-        <testsuite name="Arrayable">
-            <directory>./tests/suite/Arrayable</directory>
-        </testsuite>
-        <testsuite name="Performance">
-            <directory>./tests/suite/Performance</directory>
-            <exclude>./tests/suite/Performance/ToArray/BasicTest.php</exclude>
-            <exclude>./tests/suite/Performance/ToArray/ToArrayPerformanceTest.php</exclude>
-        </testsuite>
-        <testsuite name="Popo">
-            <directory>./tests/suite/Popo</directory>
-        </testsuite>
-    </testsuites>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" backupGlobals="false" colors="true" processIsolation="false" stopOnFailure="true" stopOnError="true" stopOnIncomplete="false" stopOnSkipped="false" stderr="true" bootstrap="tests/bootstrap.php" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.2/phpunit.xsd" cacheDirectory=".phpunit.cache" backupStaticProperties="false">
+  <coverage includeUncoveredFiles="true">
+    <report>
+      <clover outputFile="./tests/logs/coverage.xml"/>
+      <html outputDirectory="./tests/logs/coverage"/>
+    </report>
+  </coverage>
+  <logging>
+    <testdoxHtml outputFile="./tests/logs/coverage/index.html"/>
+  </logging>
+  <groups>
+    <exclude>
+      <group>skip</group>
+    </exclude>
+  </groups>
+  <testsuites>
+    <testsuite name="App">
+      <directory>./tests/suite/App</directory>
+    </testsuite>
+    <testsuite name="Arrayable">
+      <directory>./tests/suite/Arrayable</directory>
+    </testsuite>
+    <testsuite name="Performance">
+      <directory>./tests/suite/Performance</directory>
+      <exclude>./tests/suite/Performance/ToArray/BasicTest.php</exclude>
+      <exclude>./tests/suite/Performance/ToArray/ToArrayPerformanceTest.php</exclude>
+    </testsuite>
+    <testsuite name="Popo">
+      <directory>./tests/suite/Popo</directory>
+    </testsuite>
+  </testsuites>
+  <source>
+    <include>
+      <directory suffix=".php">./src</directory>
+    </include>
+    <exclude>
+      <file>src/Popo/PopoConfigurator.php</file>
+      <file>src/Popo/Command/CreateSchemaCommand.php</file>
+      <directory>tests/suite/Arrayable/Performance/</directory>
+    </exclude>
+  </source>
 </phpunit>
