--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,11 @@
     "symfony/console": "^5|^6",
     "symfony/yaml": "^5|^6",
     "nette/php-generator": "^4",
-    "symfony/config": "^6.3"
+    "symfony/config": "^5|^6",
+    "symfony/dependency-injection": "^5|^6"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9",
+    "phpunit/phpunit": "^10",
     "symfony/var-dumper": "^5|^6",
     "phpstan/phpstan": "^1.4",
     "phpmd/phpmd": "^2.13",
