--- a/popo.yml
+++ b/popo.yml
@@ -36,6 +36,7 @@ Popo:
         - \Popo\Plugin\ClassPlugin\MappingPolicyMethod\ToArrayUppercasePlugin::class
         - \Popo\Plugin\ClassPlugin\MappingPolicyMethod\ToArraySnakeToCamelPlugin::class
         - \Popo\Plugin\ClassPlugin\MappingPolicyMethod\ToArrayCamelToSnakePlugin::class
+        - \Popo\Plugin\ClassPlugin\TraitPlugin::class
       propertyPluginCollection:
         - \Popo\Plugin\PropertyPlugin\AddItemPropertyMethodPlugin::class
         - \Popo\Plugin\PropertyPlugin\DefinePropertyPlugin::class
